Ioc Container added to project with folder changes.
